@@ -28,7 +28,7 @@ public class AdapterSistemaCGP implements OrigenDeDatos{
 		return listaDisponibilidades;
 	}
 	public CGP adaptarCGP(CentroDTO cgpDTO){//TODO Adaptar demas datos, chequear comunas
-		return new CGP("",cgpDTO.getDomicilio(),cgpDTO.getZonas(),0,new Point(0,0),new Comuna(new Integer(cgpDTO.getNumComuna()).toString()));
+		return new CGP(String.join(" ","CGP",Integer.valueOf(cgpDTO.getNumComuna()).toString()),cgpDTO.getDomicilio(),cgpDTO.getZonas(),0,new Point(0,0),new Comuna(new Integer(cgpDTO.getNumComuna()).toString()));
 	}
 	public List<POI> buscar(String criterio){
 		List<CentroDTO> listaOriginal = sistema.buscarPOIS(criterio);
